# AlterChat

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT_PREP.md  SIGNING.md  THREAT_MODEL.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
alterchat-bootstrap/: Cargo.toml
alterchat-bootstrap/src/: main.rs
alterchat-core/: Cargo.toml
alterchat-core/src/: crdt.rs  crypto.rs  double_ratchet.rs  error.rs  ffi.rs  file_transfer.rs  governance.rs  identity.rs  lib.rs  main.rs  network.rs  onion.rs  pluggable.rs  plugin.rs  pow.rs  push.rs  secure_storage.rs  sharding.rs  spam.rs  storage.rs  traffic.rs  x3dh.rs
alterchat-ui/: README.md  package-lock.json  package.json
alterchat-ui/src/: App.tsx  index.css  types.ts  webrtc.ts
alterchat-ui/src-tauri/: Cargo.toml  tauri.conf.json
alterchat-ui/src-tauri/src/: db.rs  lib.rs  main.rs
alterchat-ui/src-tauri/src/commands/: auth.rs  governance.rs  media.rs  messaging.rs  mod.rs  network_cmds.rs  plugin.rs  room.rs  settings.rs  social.rs  storage.rs  system.rs
alterchat-ui/src/components/: CallManager.tsx  ChatPanel.tsx  LoginScreen.tsx  NetworkStatusBadge.tsx  OnboardingWizard.tsx  PanicModal.tsx  SafetyNumbers.tsx  TrustGraph.tsx  UpdateChecker.tsx  VaultExport.tsx
bootstrap/: README.md  docker-compose.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_onion_packet.rs  fuzz_p2p_request.rs
libp2p-community-tor/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  README.md
libp2p-community-tor/src/: lib.rs
