[workspace]
members = ["alterchat-bootstrap",
    "alterchat-core",
    "alterchat-ui/src-tauri",
]
# The fuzz crate is intentionally excluded from the normal workspace build.
# It requires the nightly toolchain and cargo-fuzz.  Build it with:
#   cargo +nightly fuzz run fuzz_p2p_request -- -max_total_time=60
exclude = ["fuzz"]
resolver = "2"
