[package]
name = "alterchat-core"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
anyhow = "1.0.102"
argon2 = "0.5.3"
automerge = "0.9.0"
base64 = "0.22.1"
bincode = "1.3.3"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
hkdf = "0.13.0"
hmac = { version = "0.13.0", features = ["zeroize"] }
libp2p = { version = "0.56.0", features = ["tcp", "dns", "websocket", "noise", "yamux", "kad", "gossipsub", "tokio", "macros", "ed25519", "identify", "ping", "mdns", "request-response", "cbor", "relay", "dcutr", "quic"] }
libp2p-community-tor = { path = "../libp2p-community-tor" }
ml-kem = { version = "0.3.2", features = ["zeroize", "getrandom"] }
pbkdf2 = "0.13.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sysinfo = "0.39.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
x25519-dalek = "2.0.1"
zeroize = { version = "1.8.2", features = ["derive"] }
