[package]
name = "alterchat-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
alterchat-core = { path = "../alterchat-core" }
bincode = "1.3.3"
serde_json = "1.0"

[[bin]]
name = "fuzz_p2p_request"
path = "fuzz_targets/fuzz_p2p_request.rs"
test = false
doc = false

[[bin]]
name = "fuzz_onion_packet"
path = "fuzz_targets/fuzz_onion_packet.rs"
test = false
doc = false
