[package]
name = "alterchat-ui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "alterchat_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alterchat-core = { path = "../../alterchat-core" }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32.1", features = ["bundled-sqlcipher"] }
dirs = "6.0.0"
hex = "0.4.3"
bincode = "1.3.3"
sysinfo = "0.39.2"
sha2 = "0.11.0"
zeroize = "1.8.2"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
x25519-dalek = "2.0.1"
ml-kem = { version = "0.3.2", features = ["zeroize", "getrandom"] }

